--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
-cmake_minimum_required(VERSION 3.28)
+cmake_minimum_required(VERSION 3.10.2)
 project(Betriebssysteme_und_Verteilte_Systeme_Projekte C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Betriebssysteme_und_Verteilte_Systeme_Projekte main.c)
+add_executable(Betriebssysteme_und_Verteilte_Systeme_Projekte main.c
+        sub.c
+        sub.h
+        keyValStore.c
+        keyValStore.h)
