--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,7 @@ add_executable(Betriebssysteme_und_Verteilte_Systeme_Projekte main.c
         keyValStore.c
         keyValStore.h
         main.h)
+
+
+find_package(Threads REQUIRED)
+target_link_libraries(Betriebssysteme_und_Verteilte_Systeme_Projekte Threads::Threads)
